<?xml version="1.0" encoding="utf-8"?>
<shortcuts xmlns:android="http://schemas.android.com/apk/res/android">
    <shortcut
        android:shortcutId="resume"
        android:enabled="true"
        android:icon="@android:drawable/ic_media_play"
        android:shortcutShortLabel="@string/shortcut_resume"
        android:shortcutLongLabel="@string/shortcut_resume_long">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="com.shuckler.app"
            android:targetClass="com.shuckler.app.MainActivity">
            <extra android:name="shortcut_action" android:value="resume" />
        </intent>
    </shortcut>
    <shortcut
        android:shortcutId="shuffle"
        android:enabled="true"
        android:icon="@drawable/ic_shortcut_shuffle"
        android:shortcutShortLabel="@string/shortcut_shuffle"
        android:shortcutLongLabel="@string/shortcut_shuffle_long">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="com.shuckler.app"
            android:targetClass="com.shuckler.app.MainActivity">
            <extra android:name="shortcut_action" android:value="shuffle" />
        </intent>
    </shortcut>
    <shortcut
        android:shortcutId="recently_played"
        android:enabled="true"
        android:icon="@drawable/ic_shortcut_recently"
        android:shortcutShortLabel="@string/shortcut_recently"
        android:shortcutLongLabel="@string/shortcut_recently_long">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="com.shuckler.app"
            android:targetClass="com.shuckler.app.MainActivity">
            <extra android:name="shortcut_action" android:value="recently_played" />
        </intent>
    </shortcut>
</shortcuts>
